<resources>
    <string name="app_name">Endora</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">No plans created, click the plus to make one now!</string>
    <string name="successful_day">Successful Day</string>
    <string name="today">Today\'s Workout</string>
    <string name="exercise">Select Exercise: </string>
    <string name="add_sets">No sets added, click the plus to add some!</string>
    <string name="set_rest_time">Set Rest Time</string>
    <string name="no_days">No days have been added, hit the plus to add one</string>
    <string name="day">Day</string>
    <string name="no_exercise">No exercise have been added, click the plus to add some</string>
    <string name="set">Set</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight (kg)</string>
    <string name="rest_time">Rest Time</string>
    <string name="done">Done</string>
    <string name="plan_name">Enter Plan Name</string>
    <string name="plan_name_label">Plan Name:</string>
    <string name="delete">Delete</string>
    <string name="new_plan">New Plan</string>
    <string name="new_exercise">New Exercise</string>
    <string name="summary_label">Plan Summary:</string>
    <string name="summary">Enter a summary of this day</string>
    <string name="workout_now">Workout Now!</string>
    <string name="set_workout_time">Set workout time in mins:</string>
    <string name="send_to_google">Send To Google</string>
    <string name="permission_approved">Permission approved, you can now continue</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="edit">Edit</string>
    <string name="workout_time_error">Workout time should only contain numbers</string>
    <string name="workout_time_too_small">Workout time must be greater than 0</string>
</resources>
