<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_margin_small"
            android:layout_marginBottom="@dimen/text_margin_small">

            <TextView
                android:id="@+id/text_day_0"
                android:textAlignment="center"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_text_height"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/text_day_1"
                android:textAlignment="center"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_text_height"
                android:text="@string/tue" />

            <TextView
                android:id="@+id/text_day_2"
                android:textAlignment="center"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_text_height"
                android:text="@string/wed" />

            <TextView
                android:id="@+id/text_day_3"
                android:textAlignment="center"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_text_height"
                android:text="@string/thu" />

            <TextView
                android:id="@+id/text_day_4"
                android:textAlignment="center"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_text_height"
                android:text="@string/fri" />

            <TextView
                android:id="@+id/text_day_5"
                android:textAlignment="center"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_text_height"
                android:text="@string/sat" />

            <TextView
                android:id="@+id/text_day_6"
                android:textAlignment="center"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_text_height"
                android:text="@string/sun" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/top_layout">

            <ImageView
                android:id="@+id/image_day_0"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:contentDescription="@string/today"
                android:src="@drawable/empty_circle" />

            <ImageView
                android:id="@+id/image_day_1"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:contentDescription="@string/today"
                android:src="@drawable/empty_circle" />

            <ImageView
                android:id="@+id/image_day_2"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:contentDescription="@string/today"
                android:src="@drawable/empty_circle" />

            <ImageView
                android:id="@+id/image_day_3"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:contentDescription="@string/today"
                android:src="@drawable/empty_circle" />

            <ImageView
                android:id="@+id/image_day_4"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:contentDescription="@string/today"
                android:src="@drawable/empty_circle" />

            <ImageView
                android:id="@+id/image_day_5"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:contentDescription="@string/today"
                android:src="@drawable/empty_circle" />

            <ImageView
                android:id="@+id/image_day_7"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:contentDescription="@string/today"
                android:src="@drawable/empty_circle" />

        </LinearLayout>
    </RelativeLayout>
</layout>